--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#APP CONFIGS
+server.port=8084
+logging.file=server.log
 
+spring.datasource.platform=org.hibernate.dialect.PostgreSQL95Dialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/d_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
