--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ logging.file=server.log
 ##BANCO CONFIGS
 spring.datasource.platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/d_db
+spring.datasource.url=jdbc:postgresql://d-server-db:5432/d_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.show-sql=true
@@ -13,3 +13,11 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 #spring.jpa.open-in-view=false
+
+#OAUTH CONFIG
+auth-server=http://d-server-auth:8081
+security.oauth2.resource.check-token-url=${auth-server}/oauth/check_token
+security.oauth2.resource.token-url=${auth-server}/oauth/token
+security.oauth2.resource.resource-id=d_main
+security.oauth2.client-id=admin
+security.oauth2.client.client-secret=admin1234
