--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
 - include:
     file: db/changelog/migrations/db.changelog-main-01.sql
+- include:
+    file: db/changelog/migrations/db.changelog-main-02.sql
