--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 #spring.jpa.open-in-view=false
+
+spring.boot.admin.client.url=http://d-server-admin:8087
+management.endpoints.web.exposure.include=*
+spring.boot.admin.client.instance.name=d-main
