--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #APP CONFIGS
 server.port=8084
+spring.application.name=d-server-main
 logging.file=server.log
 
 ##BANCO CONFIGS
@@ -16,4 +17,6 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 spring.boot.admin.client.url=http://d-server-admin:8087
 management.endpoints.web.exposure.include=*
-spring.boot.admin.client.instance.name=d-main
+
+spring.boot.admin.client.instance.name=d-server-main
+eureka.client.serviceUrl.defaultZone=http://d-server-eureka:8088/eureka
