--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-#APP CONFIGS
+#App config
 server.port=8084
-spring.application.name=d-server-main
 logging.file=server.log
+app-name=d-server-main
 
-##BANCO CONFIGS
+#Banco config
 spring.datasource.platform=org.hibernate.dialect.PostgreSQL95Dialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://d-server-db:5432/d_db
@@ -12,11 +12,14 @@ spring.datasource.password=postgres
 spring.jpa.show-sql=true
 ## For error clob not implements yet
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
-
 #spring.jpa.open-in-view=false
 
-spring.boot.admin.client.url=http://d-server-admin:8087
+#Admin config
+spring.boot.admin.client.url=d-server-admin
 management.endpoints.web.exposure.include=*
+spring.boot.admin.client.instance.name=${app-name}
 
-spring.boot.admin.client.instance.name=d-server-main
+#Eureka config
+spring.application.name=${app-name}
 eureka.client.serviceUrl.defaultZone=http://d-server-eureka:8088/eureka
+eureka.client.registerWithEureka=true
